--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-body { 
+body, #fullscreen-root { 
     font-family: 'Raleway', sans-serif;
     -webkit-font-smoothing: antialiased !important;
     background: #F3EED9;
     font-size: 16px;
-  }
-  #root { height: 100%; }
-  body, body * {
+}
+
+#root { height: 100%; }
+
+body, body * {
     margin: 0;
     padding: 0;
 }
